<resources>
    <string name="app_name">ID PROJECT 000375935</string>
    <string name="movie">Movie Title</string>
    <string name="year">Movie Release Year</string>
    <string name="year_hint">IE:(2018)</string>
    <string name="search_button">Search</string>
    <string name="actors">Actors</string>
    <string name="plot">Synopsis</string>
    <string name="movie_hint">IE:(Black Panther)</string>
    <string name="fav">♥</string>
    <string name="addtofav">Add to favourites</string>
    <string name="img">Movie Image</string>
    <string name="removeButton">💔</string>
    <string name="delete_text">Are you sure you want to delete this entry?</string>
    <string name="open">\"Drawer Is Open\"</string>
    <string name="close">Drawer Is Closed</string>

</resources>